Fix over-wide elements on small screens to test mobile nav.

--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -3,10 +3,12 @@
   text-align: center;
   margin-bottom: 3.5rem;
 
-  .showcase-book {
-    display: inline-block;
-    color: $black;
-    width:160px;
+  @include breakpoint(medium){
+    .showcase-book {
+      display: inline-block;
+      color: $black;
+      width:160px;
+    }
   }
 
   .lead {
@@ -143,13 +145,16 @@
     min-height: 555px;
     background: white url("../images/theme/meet-our-poets.png") no-repeat;
 
-    a {
-      background: white;
-      padding: 5px;
-      text-decoration: underline;
-      position: relative;
-      left: 380px;
-      top: 155px;
+    @include breakpoint(medium)
+    {
+      a {
+        background: white;
+        padding: 5px;
+        text-decoration: underline;
+        position: relative;
+        left: 380px;
+        top: 155px;
+      }
     }
   }
 }
